--- a/delrepo.html
+++ b/delrepo.html
@@ -11,6 +11,10 @@
         <button id="bnt">누르세요</button> 
     </body>
     <script>
+    let root = document.getElementById('root');
+    root.style.alignItems = "center";
+    root.style.justifyContent = "center";
+    root.style.justifyItems = "center";
     let bnt = document.getElementById('bnt');
     bnt.style.position = "absolute";
     bnt.style.top = "52vh";
@@ -18,10 +22,7 @@
     bnt.style.height = "10vh";
     bnt.style.background = "rgba(1,1,1,0.2)";
     bnt.addEventListener('click', function(event){
-      fs.unlink('example.txt', err => {
-        if (err) throw err;
-        console.log('File is deleted.');
-      });
-    })
+
+    });
   </script>
     </html>
