--- a/delrepo.html
+++ b/delrepo.html
@@ -1,20 +1,30 @@
 <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-    </head>
-    <body>
-        <h1>누르지마세요 후회합니다</h1>
-        <button id="bnt">누르세요</button> 
-    </body>
-    <script>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <style> 
+  *{ margin:0; padding:0; box-sizing: border-box;  }
+  </style>
+</head>
+<body>
+  <div di="cont">
+    <h1>누르지마세요 후회합니다</h1>
+    <button id="bnt">누르세요</button> 
+  </div>
+</body>
+  <script>
+    let cont = document.getElementById('cont');
+    cont.style.width = "100vw";
+    cont.style.height = "100vh";
+    cont.style.display = "flex";
+    cont.style.alignContent = "center";
     let bnt = document.getElementById('bnt');
     bnt.style.justifyContent = "center";
-    bnt.style.display = "flex";
-    bnt.style.top = "52vh";
+    bnt.style.alignContent = "center";
+    bnt.style.fontSize = "5vh";
     bnt.style.width = "30vw";
     bnt.style.height = "10vh";
     bnt.style.background = "rgba(1,1,1,0.2)";
@@ -22,4 +32,4 @@
       alert("당신의 레포지토리가 없어졌습니다");
     });
   </script>
-    </html>
+</html>
